@@ -1,3 +1,10 @@
+2008-09-04  kitone  <kitone@gna.org>
+
+	* src/actions/DocumentManagement.cc:
+	* src/gui/Application.cc:
+	* src/gui/Application.h:
+	Remove auto-save code from Application.cc and add it in DocumentManagement.cc.
+
 2008-09-01  kitone  <kitone@gna.org>
 
 	* src/we/WaveformRendererCairo.cc:
